...
) {
    Column {
        AnimatedVisibility(visible = visible) {
            LazyRow(
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("GenresHorizontalList"),
                contentPadding = PaddingValues(bottom = 8.dp, start = 8.dp, end = 8.dp),
                horizontalArrangement = Arrangement.spacedBy(4.dp)
            ) {
                items(data, key = { it.text }) {
                    Chip(
                        borderWidth = 1.dp,
...
